# Android-Dumper-7

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dex_payload.h  native-lib.cpp
app/src/main/cpp/Core/: NameArray.cpp  NameArray.h  ObjectArray.cpp  ObjectArray.h  UEStructs.h
app/src/main/cpp/Dumper/: DumperUI.cpp  DumperUI.h  SDKDumper.cpp  SDKDumper.h
app/src/main/cpp/Engine/: EnvDiag.cpp  EnvDiag.h  NameArrayDiag.cpp  NameArrayDiag.h  ObjectArrayDiag.cpp  ObjectArrayDiag.h  OffsetFinder.cpp  OffsetFinder.h  PatternScanner.cpp  PatternScanner.h  SafeMemory.cpp  SafeMemory.h  SafeMemoryDiag.cpp  SafeMemoryDiag.h  StructOffsetDiag.cpp  StructOffsetDiag.h  StructOffsetFinder.cpp  StructOffsetFinder.h
app/src/main/cpp/Includes/: Utility.cpp  Utility.h
app/src/main/cpp/UI/: MainPanel.cpp  MainPanel.h
app/src/main/cpp/imgui/backends/: imgui_impl_android.cpp  imgui_impl_android.h
app/src/main/java/com/sahilm9098/arkmodmenu/: GLES3JNIView.java  Loader.java  MenuOverlay.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
